<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclrs_tests_with_messages</name>
  <version>0.2.0</version>
  <description>Package containing tests which depend on message packages.</description>
  <maintainer email="nnmmgit@gmail.com">Nikolai Morin</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>rclrs</build_depend>
  <build_depend>rclrs_example_msgs</build_depend>

  <exec_depend>rclrs</exec_depend>
  <exec_depend>rclrs_example_msgs</exec_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
