<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_cool_cpp_node</name>
  <version>0.0.0</version>
  <description>Example C++ binary using a Rust package</description>
  <maintainer email="nnmmgit@gmail.com">Nikolai Morin</maintainer>
  <license>apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>my_cool_rust_pkg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
