<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_cool_rust_pkg</name>
  <version>0.2.0</version>
  <description>Package containing an example Rust library exported to CMake.</description>
  <maintainer email="nnmmgit@gmail.com">Nikolai Morin</maintainer>
  <license>Apache License 2.0</license>

  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
